@@ -11,13 +11,14 @@ import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertThat;
 
 import java.net.URL;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 
-import org.junit.Test;
-
 import jp.kusumotolab.kgenprog.project.ProjectBuilder;
 import jp.kusumotolab.kgenprog.project.TargetProject;
+
+import org.junit.Test;
 
 public class TestExecutorTest {
 
@@ -45,29 +46,29 @@ public class TestExecutorTest {
 	final static FullyQualifiedName dummyTest01 = new TestFullyQualifiedName("jp.kusumotolab.UtilTest.dummyTest01");
 
 	private TestResults generateTestResultsForExample01() throws Exception {
-		final String rootDir = "example/example01";
-		final String outDir = rootDir + "/_bin/";
+		final Path rootDir = Paths.get("example/example01");
+		final Path outDir = rootDir.resolve("_bin");
 		final TargetProject targetProject = TargetProject.generate(rootDir);
-		new ProjectBuilder(targetProject).build(Paths.get(outDir));
-		final TestExecutor executor = new TestExecutor(new URL[] { new URL("file:./" + outDir) });
+		new ProjectBuilder(targetProject).build(outDir);
+		final TestExecutor executor = new TestExecutor(new URL[] { outDir.toUri().toURL() });
 		return executor.exec(Arrays.asList(buggyCalculator), Arrays.asList(buggyCalculatorTest));
 	}
 
 	private TestResults generateTestResultsForExample02() throws Exception {
-		final String rootDir = "example/example02";
-		final String outDir = rootDir + "/_bin/";
+		final Path rootDir = Paths.get("example/example02");
+		final Path outDir = rootDir.resolve("_bin");
 		final TargetProject targetProject = TargetProject.generate(rootDir);
-		new ProjectBuilder(targetProject).build(Paths.get(outDir));
-		final TestExecutor executor = new TestExecutor(new URL[] { new URL("file:./" + outDir) });
+		new ProjectBuilder(targetProject).build(outDir);
+		final TestExecutor executor = new TestExecutor(new URL[] { outDir.toUri().toURL() });
 		return executor.exec(Arrays.asList(buggyCalculator, util), Arrays.asList(buggyCalculatorTest, utilTest));
 	}
 
 	private TestResults generateTestResultsForExample03() throws Exception {
-		final String rootDir = "example/example03";
-		final String outDir = rootDir + "/_bin/";
+		final Path rootDir = Paths.get("example/example03");
+		final Path outDir = rootDir.resolve("_bin");
 		final TargetProject targetProject = TargetProject.generate(rootDir);
-		new ProjectBuilder(targetProject).build(Paths.get(outDir));
-		final TestExecutor executor = new TestExecutor(new URL[] { new URL("file:./" + outDir) });
+		new ProjectBuilder(targetProject).build(outDir);
+		final TestExecutor executor = new TestExecutor(new URL[] { outDir.toUri().toURL() });
 		return executor.exec(Arrays.asList(buggyCalculator, util, inner, staticInner, outer),
 				Arrays.asList(buggyCalculatorTest, utilTest));
 	}
@@ -99,10 +100,9 @@ public class TestExecutorTest {
 		final TestResults r = generateTestResultsForExample02();
 
 		// example02で実行されたテストは10個のはず
-		assertThat(r.getExecutedTestFQNs(),
-				is(containsInAnyOrder( //
-						test01, test02, test03, test04, //
-						plusTest01, plusTest02, minusTest01, minusTest02, dummyTest01)));
+		assertThat(r.getExecutedTestFQNs(), is(containsInAnyOrder( //
+				test01, test02, test03, test04, //
+				plusTest01, plusTest02, minusTest01, minusTest02, dummyTest01)));
 
 		// テストの成否はこうなるはず
 		assertThat(r.getTestResult(test01).failed, is(false));
@@ -134,10 +134,9 @@ public class TestExecutorTest {
 		final TestResults r = generateTestResultsForExample03();
 
 		// example03で実行されたテストは10個のはず
-		assertThat(r.getExecutedTestFQNs(),
-				is(containsInAnyOrder( //
-						test01, test02, test03, test04, //
-						plusTest01, plusTest02, minusTest01, minusTest02, dummyTest01)));
+		assertThat(r.getExecutedTestFQNs(), is(containsInAnyOrder( //
+				test01, test02, test03, test04, //
+				plusTest01, plusTest02, minusTest01, minusTest02, dummyTest01)));
 
 		// テストの成否はこうなるはず
 		assertThat(r.getTestResult(test01).failed, is(false));
